--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
 
         
 
-        async function exportTripToExcel() {
+        function exportTripToExcel() {
           if (!currentTripId) { showMessage('Please select a trip first.', 'warning'); return; }
           const trip = trips.find(t => t.id === currentTripId);
           if (!trip) { showMessage('Current trip not found.', 'error'); return; }
@@ -1004,26 +1004,24 @@
           const tripExpenses = expenses.filter(exp => exp.tripId === currentTripId);
           if (tripExpenses.length === 0) { showMessage('No expenses in this trip.', 'warning'); return; }
 
-          // 1) Prepare workbook
-          const workbook = new ExcelJS.Workbook();
+          const wb = new ExcelJS.Workbook();
 
-          // ========= Sheet 1: Expenses (keep existing behavior) =========
-          const sheet = workbook.addWorksheet('Expenses');
-          sheet.addRow(['Description', 'Category', 'Amount', 'Currency', 'Payer', 'Sharers', 'CustomSplit', 'CreatedAt', 'TWD (approx)']);
-          const header = sheet.getRow(1);
-          header.font = { bold: true, color: { argb: 'FFFFFFFF' } };
-          header.fill = { type: 'pattern', pattern: 'solid', fgColor: { argb: 'FF4F46E5' } };
+          // ===== Sheet 1: Expenses =====
+          const s1 = wb.addWorksheet('Expenses');
+          const head1 = ['Description','Category','Amount','Currency','Payer','Sharers','CustomSplit','CreatedAt','TWD (approx)'];
+          s1.addRow(head1);
+          head1.forEach((_, i)=>{ const c = s1.getRow(1).getCell(i+1); c.font={bold:true,color:{argb:'FFFFFFFF'}}; c.fill={type:'pattern',pattern:'solid',fgColor:{argb:'FF4F46E5'}}; });
 
           tripExpenses.forEach(exp => {
             const sharersText = Array.isArray(exp.sharers) ? exp.sharers.join(', ') : '';
             const customSplitText = exp.customSplit
-              ? Object.entries(exp.customSplit).map(([name, val]) => name + ': ' + (exp.currency || '') + ' ' + val).join('; ')
+              ? Object.entries(exp.customSplit).map(([n,v]) => `${n}: ${(exp.currency||'')} ${v}`).join('; ')
               : '';
             const twd = convertExpenseToTWD(exp);
-            sheet.addRow([
+            s1.addRow([
               exp.description || '',
               exp.category || '',
-              exp.amount != null ? exp.amount : '',
+              exp.amount ?? '',
               exp.currency || '',
               exp.payer || '',
               sharersText,
@@ -1032,75 +1030,80 @@
               Math.round(twd)
             ]);
           });
-          sheet.columns.forEach(col => { col.width = 20; });
+          s1.columns = head1.map(() => ({ width: 20 }));
 
-          // ========= Sheet 2: Summary (NEW) =========
-          const sumSheet = workbook.addWorksheet('Summary');
-          const title = (trip.name || 'Trip') + ' - Summary';
-          sumSheet.addRow([title]).font = { bold: true, size: 14 };
-          sumSheet.mergeCells(1, 1, 1, 4);
+          // ===== Sheet 2: Summary =====
+          const s2 = wb.addWorksheet('Summary');
 
-          // 2) Trip total in TWD
+          // Title
+          s2.mergeCells(1,1,1,4);
+          const titleCell = s2.getCell(1,1);
+          titleCell.value = `${trip.name || 'Trip'} - Summary`;
+          titleCell.font = { bold:true, size:14 };
+
+          // Trip total (TWD)
           let tripTotalTWD = 0;
           tripExpenses.forEach(e => { tripTotalTWD += convertExpenseToTWD(e); });
-          sumSheet.addRow([]);
-          sumSheet.addRow(['Trip Total (TWD)', Math.round(tripTotalTWD)]);
-          sumSheet.getRow(sumSheet.lastRow.number).font = { bold: true };
+          s2.addRow([]);
+          s2.addRow(['Trip Total (TWD)', Math.round(tripTotalTWD)]);
+          s2.getRow(s2.lastRow.number).getCell(1).font = { bold:true };
+          s2.getRow(s2.lastRow.number).getCell(2).font = { bold:true };
 
-          // 3) Per-member table: Paid / Should (Spent) / Net
-          const balances = calculateBalances(); // uses currentTripId + globals
-          sumSheet.addRow([]);
-          sumSheet.addRow(['Member', 'Actual Paid (TWD)', 'Theoretical Spend (TWD)', 'Net (TWD)', 'Status']).font = { bold: true };
+          // Per-member table
+          const balances = calculateBalances();
+          s2.addRow([]);
+          const head2 = ['Member','Actual Paid (TWD)','Theoretical Spend (TWD)','Net (TWD)','Status'];
+          s2.addRow(head2);
+          head2.forEach((_, i)=> s2.getRow(s2.lastRow.number).getCell(i+1).font={bold:true});
 
           Array.from(balances.entries()).forEach(([member, data]) => {
-            const paid = Math.round(data.paid || 0);
-            const spent = Math.round(data.spent || 0);
-            const net = Math.round((data.net || 0));
+            const paid = Math.round(data.paid||0);
+            const spent = Math.round(data.spent||0);
+            const net = Math.round((data.net||0));
             let status = 'Balanced';
             if (net > 0) status = 'Receivable ' + net;
             if (net < 0) status = 'Payable ' + Math.abs(net);
-            sumSheet.addRow([member, paid, spent, net, status]);
+            s2.addRow([member, paid, spent, net, status]);
           });
 
-          // 4) Settlement path: who pays whom
+          // Settlement path
           const settlements = simplifyDebts(balances);
-          sumSheet.addRow([]);
-          sumSheet.addRow(['Settlement Path']).font = { bold: true };
+          s2.addRow([]);
+          s2.addRow(['Settlement Path']);
+          s2.getRow(s2.lastRow.number).getCell(1).font = { bold:true };
           if (settlements.length === 0) {
-            sumSheet.addRow(['No settlement needed (within tolerance).']);
+            s2.addRow(['No settlement needed (within tolerance).']);
           } else {
-            sumSheet.addRow(['From', 'To', 'Amount (TWD)']).font = { bold: true };
-            settlements.forEach(s => {
-              sumSheet.addRow([s.from, s.to, Math.round(s.amount)]);
-            });
+            s2.addRow(['From','To','Amount (TWD)']);
+            s2.getRow(s2.lastRow.number).eachCell(c => c.font = { bold:true });
+            settlements.forEach(s => s2.addRow([s.from, s.to, Math.round(s.amount)]));
           }
 
-          // 5) Optional: snapshot of exchange rates used (base TWD)
-          sumSheet.addRow([]);
-          sumSheet.addRow(['Exchange Rates (Base TWD)']).font = { bold: true };
-          sumSheet.addRow(['Currency', 'Rate']);
-          Object.entries(exchangeRates || { TWD:1 }).forEach(([code, rate]) => {
-            sumSheet.addRow([code, rate]);
-          });
+          // Exchange rate snapshot
+          s2.addRow([]);
+          s2.addRow(['Exchange Rates (Base TWD)']);
+          s2.getRow(s2.lastRow.number).getCell(1).font = { bold:true };
+          s2.addRow(['Currency','Rate']);
+          s2.getRow(s2.lastRow.number).eachCell(c => c.font = { bold:true });
+          Object.entries(exchangeRates || {TWD:1}).forEach(([code, rate]) => s2.addRow([code, rate]));
 
-          // column widths
-          sumSheet.columns.forEach((col, idx) => {
-            col.width = idx === 0 ? 24 : 18;
-          });
+          s2.columns = [{width:24},{width:18},{width:18},{width:14},{width:18}];
 
-          // 6) Download
-          const buffer = await workbook.xlsx.writeBuffer();
-          const blob = new Blob([buffer], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
-          const url = URL.createObjectURL(blob);
-          const a = document.createElement('a');
-          const stamp = new Date().toISOString().replace(/[:.]/g, '-');
-          a.href = url;
-          a.download = (trip.name || 'trip') + '-' + stamp + '.xlsx';
-          document.body.appendChild(a);
-          a.click();
-          document.body.removeChild(a);
-          URL.revokeObjectURL(url);
-          showMessage('Excel exported with summary.', 'success');
+          // Download
+          wb.xlsx.writeBuffer().then(buf=>{
+            const blob = new Blob([buf],{type:'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'});
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            const stamp = new Date().toISOString().replace(/[:.]/g,'-');
+            a.href = url;
+            a.download = `${trip.name || 'trip'}-${stamp}.xlsx`;
+            document.body.appendChild(a); a.click(); document.body.removeChild(a);
+            URL.revokeObjectURL(url);
+            showMessage('Excel exported with summary.', 'success');
+          }).catch(e=>{
+            console.error(e);
+            showMessage('Excel export failed: ' + (e.message||''), 'error');
+          });
         }
 
         function markTripEdited(tripId) {
