--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
 
           // ===== Sheet 1: Expenses =====
           const s1 = wb.addWorksheet('Expenses');
-          const head1 = ['Description','Category','Amount','Currency','Payer','Sharers','CustomSplit','CreatedAt','TWD (approx)'];
+          const head1 = ['Description','Category','Amount','Currency','Payer','Sharers','CustomSplit','CreatedAt','RateUsed','TWD (approx)'];
           s1.addRow(head1);
           head1.forEach((_, i)=>{ const c = s1.getRow(1).getCell(i+1); c.font={bold:true,color:{argb:'FFFFFFFF'}}; c.fill={type:'pattern',pattern:'solid',fgColor:{argb:'FF4F46E5'}}; });
 
@@ -1018,6 +1018,11 @@
               ? Object.entries(exp.customSplit).map(([n,v]) => `${n}: ${(exp.currency||'')} ${v}`).join('; ')
               : '';
             const twd = convertExpenseToTWD(exp);
+            // Rate used at creation (fallback to current exchange rate or 1)
+            const rateUsed = (exp.rateAtCreation != null)
+              ? exp.rateAtCreation
+              : ((exp.currency && exchangeRates && exchangeRates[exp.currency] != null) ? exchangeRates[exp.currency] : 1);
+
             s1.addRow([
               exp.description || '',
               exp.category || '',
@@ -1027,10 +1032,11 @@
               sharersText,
               customSplitText,
               exp.createdAt ? new Date(exp.createdAt).toISOString() : '',
+              `${exp.currency || 'TWD'}→TWD: ${rateUsed}`,
               Math.round(twd)
             ]);
           });
-          s1.columns = head1.map(() => ({ width: 20 }));
+          s1.columns = head1.map((_, i) => ({ width: (i >= 8 ? 22 : 20) }));
 
           // ===== Sheet 2: Summary =====
           const s2 = wb.addWorksheet('Summary');
