--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="flex space-x-3">
                     <div class="flex-1">
                         <label class="block text-sm font-medium text-gray-700 mb-1">金額</label>
-                        <input type="number" id="expense-amount" placeholder="0" min="0" step="1"
+                        <input type="number" id="expense-amount" placeholder="0" min="0" step="1" inputmode="decimal"
                                class="w-full p-3 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500 appearance-none">
                     </div>
                     <div class="w-24">
@@ -1391,6 +1391,7 @@
                 input.value = rate || 0;
                 input.min = '0';
                 input.step = '0.0001';
+                input.inputMode = 'decimal';
                 input.className = 'w-full sm:flex-1 p-2 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500 text-sm min-w-0';
                 input.addEventListener('input', () => {
                     const val = parseFloat(input.value);
@@ -1821,7 +1822,7 @@
                     <label class="w-20 text-sm font-medium text-gray-700">${member}</label>
                     <div class="flex-1 flex border border-gray-300 rounded-lg focus-within:ring-blue-500 focus-within:border-blue-500">
                         <span class="p-2 bg-gray-100 rounded-l-lg border-r border-gray-300 text-sm">${expenseCurrencySelect.value}</span>
-                        <input type="number" id="split-${member}" placeholder="" min="0" step="1" data-name="${member}"
+                        <input type="number" id="split-${member}" placeholder="" min="0" step="1" inputmode="decimal" data-name="${member}"
                                class="flex-1 p-2 rounded-r-lg focus:outline-none appearance-none custom-split-input"
                                onchange="updateCustomSplitAmount('${member}', this.value)">
                     </div>
